# learn-ros2-cavs

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  SETUP.md
.devcontainer/: Dockerfile  devcontainer.json
guides/: 00_SetupWorkspace.md  01_PackageCreation.md  02_InitialSoftware.md  03_InitialTesting.md  04_BetterTesting.md  05_NodeCreation.md  06_Interfaces.md  07_NodeTesting.md  07_Parameters.md
set_speed_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
set_speed_manager/include/set_speed_manager/: set_speed_manager.hpp
set_speed_manager/set_speed_manager/: manager.py  node.py  set_speed_node.py  vehicle_speed_node.py
set_speed_manager/src/: set_speed_manager.cpp
set_speed_manager/test/: test_manager.py  test_set_speed_manager.cpp
